fix 1 số lỗi của sinh viên

--- a/SEP21/Areas/QuanLy/Views/BaiViets/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Details.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Thông Tin Bài Viết</h2>
+<h2>Thông tin bài viết</h2>
 
 <div>
-    <h4>Bài Viết</h4>
+    <h4>Bài viết</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Ngày Đăng Bài
+            Ngày đăng bài
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            Tiêu Đề
+            Tiêu đề
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            Nội Dung
+            Nội dung
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            Tên Loại Bài Viết
+            Tên loại bài viết
         </dt>
 
         <dd>
@@ -46,6 +46,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Trở Lại", "Index2")
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Trở lại", "Index2")
 </p>
