--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
@@ -42,8 +42,8 @@
                                     <td class="center">@item.LoaiBaiViet1.TenLoaiBaiViet</td>
                                     <td>@item.NgayDangBai</td>
                                     <td>
-                                        @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = item.ID }) |
-                                        @Html.ActionLink("Chi Tiết", "Details", new { id = item.ID }) |
+                                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
+                                        @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
                                         @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
                                     </td>
                                 </tr>
