--- a/SEP21/Areas/QuanLy/Views/Daotaos/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            Tiêu Đề
+            Tiêu đề
         </th>
         <th>
             Nội dung
@@ -29,8 +29,8 @@
             @item.NoiDung
         </td>
         <td>
-            @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Chỉnh sửa", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Chi tiết", "Details", new { id=item.ID }) |
             @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
         </td>
     </tr>
