--- a/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Create.cshtml
@@ -56,14 +56,14 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.Label(" Tiêu Đề ", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label(" Tiêu đề ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2" for="IMG">Ảnh Tiêu Đề</label>
+            <label class="control-label col-md-2" for="IMG">Ảnh tiêu đề</label>
             <div class="col-md-10">
                 <input class="form-control" type="file" name="Picture" id="IMG" onchange="readPicture(this)" accept="image/gif,image/jpeg,image/png" />
             </div>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label(" Người Đăng ", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label(" Người đăng ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
@@ -103,5 +103,5 @@
 }
 
 <div>
-    @Html.ActionLink("Trở Lại", "Index2")
+    @Html.ActionLink("Trở lại", "Index2")
 </div>
