--- a/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Delete.cshtml
@@ -9,42 +9,42 @@
 
 <h3>Bạn chắn chắn muốn xóa không ?</h3>
 <div>
-    <h4>Bài Viết</h4>
+    <h4>Bài viết</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Ngày Đăng Bài
+            Ngày đăng bài
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.NgayDangBai)
         </dd>
         <dt>
-            Tiêu Đề
+            Tiêu đề
         </dt>
         <dd>
             @Html.DisplayFor(model => model.TieuDe)
         </dd>
         <dt>
-            Nội Dung
+            Nội dung
         </dt>
         <dd>
             @Html.DisplayFor(model => model.NoiDung)
         </dd>
         <dt>
-            Tên Loại Bài Viết
+            Tên loại bài viết
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LoaiBaiViet1.TenLoaiBaiViet)
         </dd>
         <dt>
-            Mã Nhân Viên
+            Mã nhân viên
         </dt>
         <dd>
             @Html.DisplayFor(model => model.NhanVienKhoa.HoTen)
         </dd>
         <dt>
-            Hình Ảnh
+            Hình ảnh
         </dt>
         <div class="form-group">
             <label class="control-label col-md-2" for="IMG"></label>
@@ -56,7 +56,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Xóa" class="btn btn-default" /> |
-            @Html.ActionLink("Trở Lại", "Index2")
+            @Html.ActionLink("Trở lại", "Index2")
         </div>
     }
 </div>
