--- a/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DangKyHoatDongs/Index2.cshtml
@@ -21,10 +21,10 @@
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                             <tr>
-                                <th>Số Thứ Tự</th>
-                                <th>Thời Gian Đăng Ký</th>
-                                <th>Tên Hoạt Động</th>
-                                <th>Họ Tên</th>
+                                <th>Số thứ tự</th>
+                                <th>Thời gian đăng ký</th>
+                                <th>Tên hoạt động</th>
+                                <th>Họ tên</th>
 
                             </tr>
                         </thead>
