--- a/SEP21/Areas/QuanLy/Views/Daotaos/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Create.cshtml
@@ -23,7 +23,7 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<h2>Tạo Mới</h2>
+<h2>Tạo mới</h2>
 
 
 @using (Html.BeginForm())
@@ -35,14 +35,14 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tiêu đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("Nội Dung", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control", } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
@@ -58,5 +58,5 @@
 }
 
 <div>
-    @Html.ActionLink("Trở Lại", "Index")
+    @Html.ActionLink("Trở lại", "Index")
 </div>
