--- a/SEP21/Areas/QuanLy/Views/Daotaos/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-           Nội Dung
+           Nội dung
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-           Tiêu Đề
+           Tiêu đề
         </dt>
 
         <dd>
@@ -35,7 +35,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Xóa" class="btn btn-default" /> |
-            @Html.ActionLink("Trở Lại", "Index")
+            @Html.ActionLink("Trở lại", "Index")
         </div>
     }
 </div>
