--- a/SEP21/Areas/QuanLy/Views/Daotaos/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Details.cshtml
@@ -8,18 +8,18 @@
 <h2>Chi Tiết</h2>
 
 <div>
-    <h4>Đào Tạo</h4>
+    <h4>Đào tạo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Tiêu Đề
+            Tiêu đề
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TieuDe)
         </dd>
         <dt>
-            Nội Dung
+            Nội dung
         </dt>
 
         <dd>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Trở Lại", "Index")
+    @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Trở lại", "Index")
 </p>
