--- a/SEP21/Areas/QuanLy/Views/Daotaos/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Edit.cshtml
@@ -36,14 +36,14 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tiêu đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.Label("Nội Dung", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
@@ -62,5 +62,5 @@
 }
 
 <div>
-    @Html.ActionLink("Trở Lại", "Index")
+    @Html.ActionLink("Trở lại", "Index")
 </div>
