--- a/SEP21/Areas/QuanLy/Views/LoaiBaiViets/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoaiBaiViets/Index.cshtml
@@ -21,8 +21,8 @@
                 @Html.DisplayFor(modelItem => item.TenLoaiBaiViet)
             </td>
             <td>
-                @Html.ActionLink("Chỉnh Sửa", "Edit", new { id=item.ID }) |
-                @Html.ActionLink("Chi Tiết", "Details", new { id=item.ID }) |
+                @Html.ActionLink("Chỉnh sửa", "Edit", new { id=item.ID }) |
+                @Html.ActionLink("Chi tiết", "Details", new { id=item.ID }) |
                 @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
             </td>
         </tr>
