--- a/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
@@ -5,9 +5,6 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 <h1 class="page-header">Thông tin sinh viên</h1>
-<p>
-    @Html.ActionLink("Tạo mới", "Create")
-</p>
 @using (Html.BeginForm("Upload", "Sinhviens", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <table>
@@ -57,9 +54,9 @@
                                     <td>@item.HoTen</td>
                                     <td class="center">@item.mail</td>
                                     <td>
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                                        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
+                                        @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
+                                        @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
                                     </td>
                                 </tr>
                             }
