--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ViTri)
+            Vị trí
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SoLuong)
+            Số lượng
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.YeuCau)
+            Yêu cầu
         </dt>
 
         <dd>
@@ -36,19 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TieuDe)
+            Chi tiết
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TieuDe)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LoaiTuyenDung1.LoaiTuyenDung1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LoaiTuyenDung1.LoaiTuyenDung1)
         </dd>
 
     </dl>
