--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ViTri)
+            Vị trí
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SoLuong)
+            Số lượng
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.YeuCau)
+            Yêu cầu
         </dt>
 
         <dd>
@@ -35,13 +35,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TieuDe)
+            Chi tiết
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.TieuDe)
         </dd>
-
     </dl>
 </div>
 <p>
