--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
@@ -21,7 +21,7 @@
             Yêu cầu
         </th>
         <th>
-            Tiêu đề
+            Chi tiết
         </th>
         <th></th>
     </tr>
@@ -37,7 +37,7 @@
             @Html.DisplayFor(modelItem => item.YeuCau)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TieuDe)
+            @item.TieuDe
         </td>
         <td>
             @Html.ActionLink("Chỉnh sửa", "Edit", new { id=item.ID }) |
