--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Create.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Tiêu đề", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Chi tiết", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
