--- a/SEP21/Views/TuyenDung/Index.cshtml
+++ b/SEP21/Views/TuyenDung/Index.cshtml
@@ -4,3 +4,31 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<main id="main">
+    @foreach (var item in Model)
+    {
+        <!-- ======= Breadcrumbs ======= -->
+        <section id="breadcrumbs" class="breadcrumbs">
+            <div class="container">
+                <ol>
+                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                    <li>Tuyển dụng</li>
+                </ol>
+                <h2 style="font-family:Arial">Tuyển dụngs</h2>
+            </div>
+        </section><!-- End Breadcrumbs -->
+        <!-- ======= Portfolio Details Section ======= -->
+        <section id="portfolio-details" class="portfolio-details">
+            <div class="container">
+                <div class="row gy-4">
+                    <div class="col-lg-12">
+                        <div class="portfolio-info">
+                            @Html.Raw(item.TieuDe)
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    }
+</main>
