--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Index.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayFor(modelItem => item.SoLuong)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.YeuCau)
+            @item.YeuCau
         </td>
         <td>
             @item.TieuDe
