--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -72,20 +72,42 @@
                             <li><a href="#">Chia sẻ công cụ</a></li>
                         </ul>
                     </li>
+
+                    @if (Session["FullName"] == null)
+                    {
+                        <li>
+                            <a class="nav-link scrollto" href="@Url.Action("Login", "BaiViet")">Đăng nhập</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="dropdown">
+                            <a class="nav-link scrollto" href="#">Xin chào @Session["FullName"]</a>
+                            <ul>
+                                <li>
+                                    <a href="@Url.Action("Logout","BaiViet")">Đăng xuất</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link scrollto" href="@Url.Action("ChangePass","BaiViet")">Đổi mật khẩu</a>
+                                </li>
+                            </ul>
+
+                        </li>
+                    }
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
         </div>
     </header><!-- End Header -->
-    <p></p><br/><br />
-        @if (TempData["AlertMessage"] != null)
-        {
-        <div class="alert @TempData["AlertType"] hide">
+    <p></p><br /><br />
+    @if (TempData["AlertMessage"] != null)
+    {
+        <div id="alertBox" class="alert @TempData["AlertType"] hide">
             @TempData["AlertMessage"]
         </div>
-        }
-        @RenderBody()
+    }
+    @RenderBody()
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="footer-top">
