--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Khoa1.MaKhoa)
             </td>
             <td>
-                <img src="@Url.Action("Picture", "BaiViets", new { item.ID })" width="50px" height="50px" />
+                <img src="@Url.Action("Picture", "NhanVienKhoas", new { item.ID })" width="50px" height="50px" />
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
