--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -74,13 +74,24 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                         <li>
-                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Login<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="@Url.Action("Index","Logins")">Sinh viên</a>
                                 </li>
                                 <li>
-                                    <a href="@Url.Action("Index","LoginAdmins")">Admin</a>
+                                    <a href="@Url.Action("Index","LoginAdmins")">Quản lí</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Thông tin cá nhân<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action("Index","NhanVienKhoas")">Cán bộ Khoa</a>
+                                </li>
+                                <li>
+                                    <a href="@Url.Action("Index","SinhViens")">Thông tin sinh viên</a>
                                 </li>
                             </ul>
                         </li>
@@ -91,21 +102,12 @@
                             <a href="@Url.Action("Index","DaoTaos")"><i class="fa fa-dashboard fa-fw"></i>Đào tạo</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="@Url.Action("Index","SinhViens")">Thông tin sinh viên</a>
-                                </li>
-
-                            </ul>
-                        </li>
-                        <li>
                             <a href="@Url.Action("Index2","BaiViets")"><i class="fa fa-dashboard fa-fw"></i>Tin tức - Hoạt động</a>
                         </li>
                         <li>
                             <a href="@Url.Action("Index2","DangKyHoatDongs")"><i class="fa fa-dashboard fa-fw"></i>Danh sách đăng kí hoạt động</a>
                         </li>
-                        
+
                         <li>
                             <a href="@Url.Action("Index","TuyenDungs")" "><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
                         </li>
