--- a/SEP21/Views/BaiViet/Login.cshtml
+++ b/SEP21/Views/BaiViet/Login.cshtml
@@ -1,9 +1,6 @@
-﻿@model SEP21.Models.ForgotPasswordViewModel
-@{
-    ViewBag.Title = "Forgot your password?";
+﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,35 +32,38 @@
     <![endif]-->
 </head>
 <body>
-    @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="login-panel panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">
-                                @Html.AntiForgeryToken()
-                                Nhập thông tin tài khoản
-                            </h3>
-                        </div>
-                        @Html.ValidationSummary("", new { @class = "text-danger" })
-                        <div class="form-group">
-                            @Html.Label("Username", new { @class = "col-md-2 control-label" })
-                            <div class="col-md-10">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" class="btn btn-default" value="Email Link" />
-                            </div>
-                        </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Đăng nhập</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form" action="@Url.Action("Login2")" method="post">
+                            <fieldset>
+                                <div class="form-group">
+                                    @if (TempData["AlertMessage"] != null)
+                                    {
+                                        <div id="alertBox" class="alert @TempData["AlertType"] hide">
+                                            @TempData["AlertMessage"]
+                                        </div>
+                                    }
+                                    <input class="form-control" placeholder="Tài Khoản" name="username" type="text" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Mật Khẩu" name="password" type="password" value="">
+                                </div>
+                                <button type="submit" class="btn btn-default">Đăng Nhập</button>
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    }
+    </div>
+
     <!-- jQuery -->
     <script src="@Url.Content("~/js/jquery.min.js")"></script>
 
@@ -81,3 +81,4 @@
     </script>
 </body>
 </html>
+
