--- a/SEP21/Views/TuyenDung/Index.cshtml
+++ b/SEP21/Views/TuyenDung/Index.cshtml
@@ -6,25 +6,29 @@
 }
 
 <main id="main">
+    <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+            <ol>
+                <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+                <li>Tuyển dụng</li>
+            </ol>
+            <h2 style="font-family:Arial">Tuyển dụng</h2>
+        </div>
+    </section><!-- End Breadcrumbs -->
+
     @foreach (var item in Model)
     {
-        <!-- ======= Breadcrumbs ======= -->
-        <section id="breadcrumbs" class="breadcrumbs">
-            <div class="container">
-                <ol>
-                    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-                    <li>Tuyển dụng</li>
-                </ol>
-                <h2 style="font-family:Arial">Tuyển dụngs</h2>
-            </div>
-        </section><!-- End Breadcrumbs -->
-        <!-- ======= Portfolio Details Section ======= -->
         <section id="portfolio-details" class="portfolio-details">
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-12">
                         <div class="portfolio-info">
-                            @Html.Raw(item.TieuDe)
+                            <h3>@item.ViTri</h3>
+                            <p style="color:black">Số lượng: @item.SoLuong</p>
+                            <p style="color:black">Yêu cầu:</p>
+                            <p style="color:black">@item.YeuCau</p>
+                            <p style="color:black">Chi tiết:</p>
+                            <p style="color:black">@Html.Raw(item.TieuDe)</p>
                         </div>
                     </div>
                 </div>
