--- a/SEP21/Views/BaiViet/Details.cshtml
+++ b/SEP21/Views/BaiViet/Details.cshtml
@@ -40,7 +40,7 @@
             <div class="row gy-4">
                 <div class="col-lg-12">
                     <div class="portfolio-info">
-                        @Html.Raw(Model.NoiDung);
+                        @Html.Raw(Model.NoiDung)
                         @if (Model.LoaiBaiViet1.TenLoaiBaiViet == "Hoạt động")
                         {
                             if (Session["UserID"] == null)
