--- a/SEP21/Views/TuyenDung/Index.cshtml
+++ b/SEP21/Views/TuyenDung/Index.cshtml
@@ -28,7 +28,7 @@
                             <p style="color:black">Yêu cầu:</p>
                             <p style="color:black">@item.YeuCau</p>
                             <p style="color:black">Chi tiết:</p>
-                            <p style="color:black">@Html.Raw(item.TieuDe)</p>
+                            <p style="color:black">@Html.Raw(item.ChiTiet)</p>
                         </div>
                     </div>
                 </div>
