fix 1 số lỗi của Views

--- a/SEP21/Areas/QuanLy/Views/Daotaos/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Daotaos/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Xóa</h2>
+<h2>Xóa đào tạo</h2>
 
 <h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
