--- a/SEP21/Areas/QuanLy/Views/LoginAdmins/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoginAdmins/Delete.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Xóa tài khoản</h2>
+<h3>Bạn chắc chắn muốn xóa không ? </h3>
 <div>
-    <h4>LoginAdmin</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            Tài khoản
         </dt>
 
         <dd>
@@ -20,7 +18,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            Mật khẩu
         </dt>
 
         <dd>
@@ -29,12 +27,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở lại", "Index")
         </div>
     }
 </div>
