--- a/SEP21/Areas/QuanLy/Views/LoginAdmins/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoginAdmins/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>LoginAdmin</h4>
+        <h4>Thông tin Admin</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
