--- a/SEP21/Areas/QuanLy/Views/LoginAdmins/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoginAdmins/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Quản Lý Admin</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo mới", "Create")
 </p>
 <table class="table">
     <tr>
