--- a/SEP21/Areas/QuanLy/Views/Logins/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Logins/Delete.cshtml
@@ -5,15 +5,14 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Xóa tài khoản</h2>
+<h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
-    <h4>Login</h4>
+    <h4>Tài khoản sinh viên</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            Tài khoản
         </dt>
 
         <dd>
@@ -21,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            Mật khẩu
         </dt>
 
         <dd>
@@ -34,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở lại", "Index")
         </div>
     }
 </div>
