--- a/SEP21/Areas/QuanLy/Views/Logins/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Logins/Details.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Chi tiết</h2>
 
 <div>
-    <h4>Login</h4>
+    <h4>Tài khoản sinh viên</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            Tài khoản 
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            Mật khẩu
         </dt>
 
         <dd>
@@ -29,7 +29,6 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+<p>   
+    @Html.ActionLink("Trở lại", "Index")
 </p>
