--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Delete.cshtml
@@ -5,15 +5,15 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Xóa nhân viên khoa</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
-    <h4>NhanVienKhoa</h4>
+    <h4>Nhân viên khoa</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.HoTen)
+            Họ tên
         </dt>
 
         <dd>
@@ -21,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ChucVu)
+            Chức vụ
         </dt>
 
         <dd>
@@ -29,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Khoa1.MaKhoa)
+            Mã khoa
         </dt>
 
         <dd>
@@ -42,8 +42,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở lại", "Index")
         </div>
     }
 </div>
