--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Edit.cshtml
@@ -16,20 +16,20 @@
             }
         }
 </script>
-<h2>Edit</h2>
+<h2>Chỉnh sửa</h2>
 
 @using (Html.BeginForm("Edit", "NhanVienKhoas", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>NhanVienKhoa</h4>
+    <h4>Nhân viên khoa</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ID)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.HoTen, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Họ tên", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.HoTen, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
@@ -45,7 +45,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.ChucVu, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Chức vụ", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.ChucVu, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ChucVu, "", new { @class = "text-danger" })
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Khoa, "Khoa", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Khoa", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("Khoa", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Khoa, "", new { @class = "text-danger" })
@@ -62,12 +62,12 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Lưu" class="btn btn-default" />
         </div>
     </div>
 </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Trở lại", "Index")
 </div>
