--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Index.cshtml
@@ -5,21 +5,21 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Danh sách cán bộ khoa</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo mới", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.HoTen)
+            Họ tên
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ChucVu)
+            Chức vụ
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Khoa1.MaKhoa)
+            Mã khoa
         </th>
         <th>
             Hình ảnh
@@ -43,9 +43,9 @@
                 <img src="@Url.Action("Picture", "NhanVienKhoas", new { item.ID })" width="50px" height="50px" />
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Xóa", "Delete", new { id = item.ID })
             </td>
         </tr>
     }
