--- a/SEP21/Areas/QuanLy/Views/SinhViens/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/SinhViens/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Xóa</h2>
+<h2>Xóa sinh viên</h2>
 
 <h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
