--- a/SEP21/Areas/QuanLy/Views/SinhViens/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/SinhViens/Details.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Chi tiết</h2>
+<h2>Chi tiết sinh viên</h2>
 
 <div>
-    <h4>Sinh viên</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
