--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Delete.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Xóa bài viết</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn chắc chắn muốn xóa không ?</h3>
 <div>
-    <h4>TuyenDung</h4>
+    <h4>Tuyển dụng</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -40,7 +40,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TieuDe)
+            @Html.DisplayFor(model => model.ChiTiet)
         </dd>
 
     </dl>
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Xóa" class="btn btn-default" /> |
+            @Html.ActionLink("Trở lại", "Index")
         </div>
     }
 </div>
