--- a/SEP21/Views/BaiViet/Details.cshtml
+++ b/SEP21/Views/BaiViet/Details.cshtml
@@ -50,7 +50,7 @@
                                 <form role="form" action="@Url.Action("Login")" method="post">
                                     <input hidden class="form-control" value="@Model.ID" name="id" />
                                     <div class="form-group">
-                                        <label>Thông tin đăng nhập</label>
+                                        <label>Tên tài khoản</label>
                                         <input class="form-control" name="username">
                                         <p class="help-block">Bao gồm tên.mssv</p>
                                     </div>
