--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index2.cshtml
@@ -40,7 +40,7 @@
                                     <td>@item.NgayDangBai</td>
                                     <td>@item.TieuDe</td>
                                     <td class="center">@item.LoaiBaiViet1.TenLoaiBaiViet</td>
-                                    <td>@item.NgayDangBai</td>
+                                    <td>@item.NhanVienKhoa.HoTen</td>
                                     <td>
                                         @Html.ActionLink("Chỉnh sửa", "Edit", new { id = item.ID }) |
                                         @Html.ActionLink("Chi tiết", "Details", new { id = item.ID }) |
