--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Create.cshtml
@@ -37,7 +37,7 @@
 <h2>Tạo Mới</h2>
 
 
-@using (Html.BeginForm("Create", "TuyenDungs", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
