--- a/SEP21/Areas/QuanLy/Views/TuyenDungs/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/TuyenDungs/Edit.cshtml
@@ -36,7 +36,7 @@
 <h2>Chỉnh Sửa</h2>
 
 
-@using (Html.BeginForm("Edit", "TuyenDungs", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
