--- a/SEP21/Areas/QuanLy/Views/ManagerAdmin/Login.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ManagerAdmin/Login.cshtml
@@ -43,7 +43,7 @@
                         <h3 class="panel-title">Quản Lý Khoa CNTT</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" action="~/QuanLy/ManagerAdmin/Login" method="post">
+                        <form role="form" action="@Url.Action("Login")" method="post">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Tài Khoản" name="username" type="text" value="">
