--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -29,10 +29,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
+                    <h1></h1>
+                    <br />
                     @if (TempData["AlertMessage"] != null)
                     {
-                        <div class="alert @TempData["AlertType"] hide">
-                            @TempData["AlertMessage"]
+                        <div class="alert @TempData["AlertType"] hide" id="alertBox">
+                            @TempData["AlertMessage"] 
                         </div>
                     }
                     @RenderBody()
@@ -46,7 +48,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href="@Url.Action("Index","AdminHome")">Khoa CNTT</a>
+                <a class="navbar-brand" href="@Url.Action("Index2","BaiViets")">Khoa CNTT</a>
             </div>
 
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -141,6 +143,8 @@
                 responsive: true
             });
         });
+        $('#alertBox').removeClass('hide');
+        $('#alertBox').delay(1000).slideUp(500);
     </script>
 </body>
 </html>
