--- a/SEP21/Views/TuyenDung/Index.cshtml
+++ b/SEP21/Views/TuyenDung/Index.cshtml
@@ -26,7 +26,7 @@
                             <h3>@item.ViTri</h3>
                             <p style="color:black">Số lượng: @item.SoLuong</p>
                             <p style="color:black">Yêu cầu:</p>
-                            <p style="color:black">@item.YeuCau</p>
+                            <p style="color:black">@Html.Raw(item.YeuCau)</p>
                             <p style="color:black">Chi tiết:</p>
                             <p style="color:black">@Html.Raw(item.ChiTiet)</p>
                         </div>
