--- a/SEP21/Areas/QuanLy/Views/LoginAdmins/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoginAdmins/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.Label("Mật khẩu", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
             </div>
         </div>
