--- a/SEP21/Areas/QuanLy/Views/LoginAdmins/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoginAdmins/Edit.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group" >
             @Html.Label("Mật Khẩu", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10" >
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
             </div>
         </div>
