--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
@@ -68,5 +68,6 @@
 }
 
 <div>
-    @Html.ActionLink("Trỡ lại", "Index")
+    @Html.ActionLink("Trở lại", "Index") ||
+    @Html.ActionLink("Thêm Khoa","Index","Khoas")
 </div>
