--- a/SEP21/Views/Home/Index.cshtml
+++ b/SEP21/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
                                 <a href="@url">
                                     <img class="img-fluid" width="600px" height="400px" src="@Url.Action("Picture", new { item.ID })" alt="hinhanh">
                                     <div class="card-body">
-                                        <h3 class="card-title">*@item.LoaiBaiViet1.TenLoaiBaiViet* @item.TieuDe</h3>
+                                        <h3 class="card-title">@item.TieuDe</h3>
                                     </div>
                                 </a>
                             </div>
