Fix nhẹ sương sương

--- a/SEP21/Areas/QuanLy/Views/Logins/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Logins/Index.cshtml
@@ -4,8 +4,23 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
-
-<h2>Quản Lý Sinh Viên</h2>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Quản Lý Sinh Viên</h2>
+    </div>
+    <div class="col-md-6">
+        <form action="@Url.Action("Search")" method="get">
+            <div class="form-group input-group">
+                <input type="text" class="form-control" name="keyword" placeholder="Tìm kiếm sinh viên" value="@ViewBag.Keyword">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+            </div>
+        </form>
+    </div>
+</div>
 <table class="table">
     <tr>
         <th>
@@ -17,19 +32,19 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.username)
-        </td>
-        <td>            
-             ***
-        </td>
-        <td>
-           
-            @Html.ActionLink("Xóa", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.username)
+            </td>
+            <td>
+                ***
+            </td>
+            <td>
+                @Html.ActionLink("Khôi phục mật khẩu", "Reset", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
