--- a/SEP21/Views/BaiViet/Login.cshtml
+++ b/SEP21/Views/BaiViet/Login.cshtml
@@ -56,6 +56,7 @@
                                     <input class="form-control" placeholder="Mật Khẩu" name="password" type="password" value="">
                                 </div>
                                 <button type="submit" class="btn btn-default">Đăng Nhập</button>
+                                <a href="@Url.Action("ForgetPass")">Quên mật khẩu?</a>
                             </fieldset>
                         </form>
                     </div>
