fix hơi nhiều lỗi

--- a/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/SinhViens/Index.cshtml
@@ -31,6 +31,12 @@
 <!-- /.row -->
 <div class="row">
     <div class="col-lg-12">
+        <a href="@Url.Action("ClearAll")">
+            <button type="button" class="btn btn-primary">Xóa hết</button>
+        </a>
+        <a href="@Url.Action("ExportExcelSV")">
+            <button type="button" class="btn btn-primary">Xuất excel</button>
+        </a>
         <div class="panel panel-default">
             <div class="panel-heading">
                 DataTables Advanced Tables
