--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -49,7 +49,7 @@
         <div class="form-group">
             @Html.Label("Tiêu đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="form-group">
             @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.NoiDung, new { @class = "form-control" })
+                @Html.TextAreaFor(model => model.NoiDung, new { @class = "form-control", @required = "true" })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
                 <script>CKEDITOR.replace("NoiDung")</script>
             </div>
@@ -76,15 +76,7 @@
                 @Html.ValidationMessageFor(model => model.LoaiBaiViet, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.Label("Người đăng", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
-            </div>
-        </div>
         @Html.HiddenFor(model => model.ID)
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Lưu" class="btn btn-default" />
