--- a/SEP21/Areas/QuanLy/Views/GioiThieux/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/GioiThieux/Edit.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control", @required = "true" } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
                 <script>CKEDITOR.replace("NoiDung")</script>
             </div>
