--- a/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NhanVienKhoas/Create.cshtml
@@ -52,14 +52,6 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("Khoa", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Khoa", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Khoa, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Tạo" class="btn btn-default" />
             </div>
@@ -68,6 +60,5 @@
 }
 
 <div>
-    @Html.ActionLink("Trở lại", "Index") ||
-    @Html.ActionLink("Thêm Khoa","Index","Khoas")
+    @Html.ActionLink("Trở lại", "Index")
 </div>
